<resources>
    <string name="app_name">Login and register demo</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="email_wrong_format">Email is wrongly formatted</string>
    <string name="password_length_validation">Password must be between 6 and 12 characters long</string>
    <string name="age">Age</string>
    <string name="wrong_email_password_combination">Wrong email/password combination</string>
    <string name="age_validation">Age must be between 18 and 99 years old!</string>
    <string name="unknown_error">Unknown error</string>
    <string name="welcome">Welcome</string>
    <string name="images">Images</string>
    <string name="created_by_label">Created by:</string>
    <string name="views_label">Views:</string>
    <string name="likes_label">Likes:</string>
    <string name="comments_label">Comments:</string>
    <string name="favorites_label">Favorite count:</string>
    <string name="downloads_label">Downloads:</string>
</resources>